--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "packages/*"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "bot:dev": "npm run dev --workspace=packages/bot",
+    "bot:build": "npm run build --workspace=packages/bot",
+    "bot:start": "npm run start --workspace=packages/bot",
+    "bot:generate_db": "npm run generate_db --workspace=packages/bot",
+    "bot:deploy_docker": "npm run deploy_docker --workspace=packages/",
+    "docker:prod": "docker compose down && docker compose up",
+    "docker:dev": "docker compose down && docker compose -f dev.docker-compose.yml up"
   },
   "keywords": [],
   "author": "",
