--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -6,20 +6,20 @@
     "node": "20.x"
   },
   "scripts": {
-    "dev": "nodemon --exec ts-node src/index.ts",
-    "dev:deploy": "ts-node src/deployCommands.ts",
-    "dev:prisma": "npx prisma db push",
+    "generate_db": "npx prisma db push",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "build": "npm run dev:prisma && tsc --build",
-    "start": "node ./dist/index.js"
+    "dev": "npm run generate_db && nodemon --exec ts-node src/index.ts",
+    "build": "npm run generate_db && tsc --build",
+    "start": "node ./dist/index.js",
+    "deploy_docker": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@napi-rs/canvas": "^0.1.51",
-    "@prisma/client": "5.12.1",
+    "@prisma/client": "^5.13.0",
     "discord.js": "^14.12.1",
     "dotenv": "^16.4.5",
     "zod": "^3.22.4"
@@ -32,7 +32,7 @@
     "eslint-plugin-n": "^17.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "nodemon": "3.1.0",
-    "prisma": "^5.12.1",
+    "prisma": "^5.13.0",
     "ts-node": "10.9.2",
     "typescript": "^5.4.4",
     "vitest": "^1.4.0"
