extract command to dockerfile

--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -6,13 +6,12 @@
     "node": "20.x"
   },
   "scripts": {
-    "generate_db": "prisma db push",
+    "generate_db": "npx prisma db push",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "dev": "npm run generate_db && nodemon --exec ts-node src/index.ts",
-    "build": "npm run generate_db && tsc --build",
-    "start": "node ./dist/index.js",
-    "deploy_docker": "npm run build && npm run start"
+    "build": "npx tsc --build",
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
