--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -10,7 +10,7 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "dev": "npm run generate_db && nodemon --exec ts-node src/index.ts",
-    "build": "npx tsc --build",
+    "build": "tsc",
     "start": "node ./dist/index.js"
   },
   "keywords": [],
