--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "bot:build": "npm run build --workspace=packages/bot",
     "bot:start": "npm run start --workspace=packages/bot",
     "bot:generate_db": "npm run generate_db --workspace=packages/bot",
-    "docker:prod": "docker compose up --build",
+    "docker:prod": "env-cmd -f ./packages/bot/.env --use-shell \"docker compose up --build\"",
     "docker:dev": "docker compose down && docker compose -f dev.docker-compose.yml --build up"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
+  }
 }
