fix hot reloading en docker:dev

--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -9,7 +9,7 @@
     "generate_db": "npx prisma db push",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "dev": "npm run generate_db && nodemon --exec ts-node src/index.ts",
+    "dev": "npm run generate_db && nodemon -L --exec ts-node src/index.ts",
     "build": "tsc",
     "start": "node ./dist/index.js"
   },
