--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bot:start": "npm run start --workspace=packages/bot",
     "bot:generate_db": "npm run generate_db --workspace=packages/bot",
     "docker:prod": "docker compose up --build",
-    "docker:dev": "docker compose down && docker compose -f dev.docker-compose.yml --build up"
+    "docker:dev": "docker compose -f dev.docker-compose.yml  up --build"
   },
   "keywords": [],
   "author": "",
