fixed error of load env

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "packages/*"
   ],
   "scripts": {
-    "bot:dev": "env-cmd -f .env npm run dev --workspace=packages/bot",
-    "bot:build": "npm run build --workspace=packages/bot",
-    "bot:start": "npm run start --workspace=packages/bot",
-    "bot:generate_db": "npm run generate_db --workspace=packages/bot",
+    "bot:dev": "env-cmd npm run dev --workspace=packages/bot",
+    "bot:build": "env-cmd npm run build --workspace=packages/bot",
+    "bot:start": "env-cmd npm run start --workspace=packages/bot",
+    "bot:generate_db": "env-cmd npm run generate_db --workspace=packages/bot",
     "docker:prod": "docker compose up --build",
     "docker:dev": "docker compose -f dev.docker-compose.yml  up --build"
   },
