moved eslint to root an update dependencies

--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "env-cmd": "^10.1.0"
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@vitest/ui": "^1.5.2",
+    "env-cmd": "^10.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-love": "^47.0.0",
+    "typescript": "^5.4.5",
+    "vitest": "^1.5.2"
   }
 }
