--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -24,16 +24,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.6.0",
-    "@vitest/ui": "^1.4.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^17.1.0",
-    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "3.1.0",
     "prisma": "^5.13.0",
-    "ts-node": "10.9.2",
-    "typescript": "^5.4.4",
-    "vitest": "^1.4.0"
+    "ts-node": "10.9.2"
   }
 }
