--- a/packages/bot/tsconfig.json
+++ b/packages/bot/tsconfig.json
@@ -19,8 +19,11 @@
     "types": ["vitest/globals","./src/globals"],
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
+    "baseUrl": "src",
     "paths": {
       "@/*": ["src/*"]
+      "@/*": ["*"],
+      "@core/*": ["core/*"]
     }
   },
   "include": [
