--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -19,11 +19,13 @@
   "dependencies": {
     "@napi-rs/canvas": "^0.1.51",
     "@prisma/client": "^5.13.0",
+    "module-alias": "^2.2.3",
     "discord.js": "^14.12.1",
     "dotenv": "^16.4.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/module-alias": "^2.0.4",
     "nodemon": "3.1.0",
     "prisma": "^5.13.0",
     "ts-node": "10.9.2"
