path mapping setting

--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -17,8 +17,11 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"],
+      "@type/*": ["../shared/types/*"],
+      "@lib/*": ["src/_lib/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
