--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,6 +1,4 @@
 {
-  "display": "Node 18",
-  "_version": "18.2.0",
   "compilerOptions": {
     "lib": [
       "es2023",
@@ -8,8 +6,6 @@
     ],
     "module": "ESNext",
     "target": "es2022",
-    "outDir": "../bot/src",
-    "rootDir": "lib",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -17,9 +13,14 @@
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {
+    "@type/*": ["types/*"]
+    }
   },
   "include": [
     "lib",
+    "types"
   ],
   "exclude": [
     "dist"
