add cp command to wetsite

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "cp": "node ./cp.cjs",
+    "dev": "npm run cp && next dev",
+    "build": "npm run cp && next build",
     "start": "next start",
     "lint": "next lint"
   },
