--- a/packages/bot/tsconfig.json
+++ b/packages/bot/tsconfig.json
@@ -22,7 +22,7 @@
     "paths": {
       "@/*": ["src/*"],
       "@core/*": ["src/core/*"],
-      "@lib/*": ["../shared/lib/*"],
+      "@lib/*": ["../shared/lib/*"]
     }
   },
   "include": [
