[root] add script cp and test

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "packages/*"
   ],
   "scripts": {
+    "lint" : "eslint .",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "cp": "npm run cp --workspaces",
     "bot:dev": "env-cmd npm run dev --workspace=packages/bot",
     "bot:build": "env-cmd npm run build --workspace=packages/bot",
     "bot:start": "env-cmd npm run start --workspace=packages/bot",
