fix error in copy types

--- a/packages/bot/tsconfig.json
+++ b/packages/bot/tsconfig.json
@@ -22,8 +22,8 @@
     "paths": {
       "@/*": ["src/*"],
       "@core/*": ["src/core/*"],
-      "@lib/*": ["../shared/lib/*"]
-    }
+      "@lib/*": ["../shared/lib/*"],
+      "@type/*": ["../shared/types/*"],    }
   },
   "include": [
     "src",
