--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -21,7 +21,8 @@
     "paths": {
       "@/*": ["src/*"],
       "@type/*": ["../shared/types/*"],
-      "@lib/*": ["src/_lib/*"]
+      "@lib/*": ["src/_lib/*"],
+      "@icons/*": ["src/icons/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
