[wetsite] move general components to UI

--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -22,6 +22,8 @@
       "@/*": ["src/*"],
       "@type/*": ["../shared/types/*"],
       "@lib/*": ["src/_lib/*"],
+      "@ui/*": ["src/components/UI/*"],
+      "@hooks/*": ["src/hooks/*"],
       "@icons/*": ["src/icons/*"]
     }
   },
