--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -20,9 +20,10 @@
   "dependencies": {
     "@napi-rs/canvas": "^0.1.51",
     "@prisma/client": "^5.13.0",
-    "module-alias": "^2.2.3",
     "discord.js": "^14.12.1",
     "dotenv": "^16.4.5",
+    "module-alias": "^2.2.3",
+    "picocolors": "^1.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
