--- a/package.json
+++ b/package.json
@@ -20,6 +20,18 @@
     "docker:dev": "docker compose -f dev.docker-compose.yml up --build"
   },
   "keywords": [],
+  "prettier": {
+    "printWidth": 120,
+    "singleQuote": true,
+    "jsxSingleQuote": true,
+    "arrowParens": "avoid",
+    "semi": false,
+    "trailingComma": "none",
+    "endOfLine": "crlf",
+    "tabWidth": 2,
+    "useTabs": false,
+    "rangeEnd": 1
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
