--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "A Bot multipurpose for discord",
   "main": "index.js",
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "lint": "npx @biomejs/biome check --write --diagnostic-level=error",
     "lint:watch": "nodemon --watch . --ext ts,js,cjs,mjs,json --exec 'npm run lint'",
@@ -36,6 +38,7 @@
   "license": "ISC",
   "devDependencies": {
     "@biomejs/biome": "1.9.2",
+    "@types/get-pixels": "^3.3.4",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@vitest/ui": "^1.5.2",
     "env-cmd": "^10.1.0",
@@ -45,5 +48,8 @@
     "nodemon": "^3.1.5",
     "typescript": "^5.4.5",
     "vitest": "^1.5.2"
+  },
+  "dependencies": {
+    "get-pixels": "3.3.3"
   }
 }
