build(Root): :boom: implemented turborepo and refactoring packages/libs
this can break a lot of the code, also old eslint and prettier settings were removed, among other unused files.

--- a/packages/bot/tsconfig.json
+++ b/packages/bot/tsconfig.json
@@ -2,27 +2,49 @@
   "display": "Node 18",
   "_version": "18.2.0",
   "compilerOptions": {
-    "lib": ["es2023", "DOM"],
+    "lib": [
+      "es2023",
+      "DOM"
+    ],
     "module": "node16",
     "target": "es2022",
     "outDir": "dist",
-    "rootDirs": ["src", "../shared"],
+    "rootDirs": [
+      "src",
+      "../shared"
+    ],
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node16",
     "resolveJsonModule": true,
-    "types": ["vitest/globals", "./src/globals"],
+    "types": [
+      "vitest/globals",
+      "./src/globals"
+    ],
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "@core/*": ["src/core/*"],
-      "@lib/*": ["../shared/lib/*"],
-      "@type/*": ["../shared/types/*"]
+      "@/*": [
+        "src/*"
+      ],
+      "@core/*": [
+        "src/core/*"
+      ],
+      "@libs/*": [
+        "../libs/dist/*"
+      ],
+      "@type/*": [
+        "../libs/src/types/*"
+      ]
     }
   },
-  "include": ["src", "fonts"],
-  "exclude": ["dist"]
+  "include": [
+    "src",
+    "fonts"
+  ],
+  "exclude": [
+    "dist"
+  ]
 }
