--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -21,7 +21,9 @@
     "paths": {
       "@/*": ["src/*"],
       "@type/*": ["../shared/types/*"],
-      "@lib/*": ["src/_lib/*"],
+      "@libs/*": [
+        "src/_lib/*"
+      ],
       "@ui/*": ["src/components/UI/*"],
       "@hooks/*": ["src/hooks/*"],
       "@icons/*": ["src/icons/*"]
