--- a/package.json
+++ b/package.json
@@ -2,37 +2,20 @@
   "name": "beatriz-dono",
   "version": "1.0.0",
   "description": "A Bot multipurpose for discord",
-  "main": "index.js",
-  "workspaces": [
-    "packages/*"
-  ],
+  "packageManager": "npm@10.0.0",
+  "workspaces": ["packages/bot", "packages/website"],
   "scripts": {
-    "lint": "npx @biomejs/biome check --write --diagnostic-level=error",
-    "lint:watch": "nodemon --watch . --ext ts,js,cjs,mjs,json --exec 'npm run lint'",
+    "lint": "biome check --write --diagnostic-level=error",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "cp": "npm run cp --workspaces",
-    "website:dev": "npm run dev --workspace=packages/website",
-    "bot:dev": "env-cmd npm run dev --workspace=packages/bot",
-    "bot:build": "env-cmd npm run build --workspace=packages/bot",
+    "dev": "env-cmd turbo dev",
+    "build": "env-cmd turbo build",
     "bot:start": "env-cmd npm run start --workspace=packages/bot",
     "bot:generate_db": "env-cmd npm run generate_db --workspace=packages/bot",
     "docker:prod": "docker compose up --build",
     "docker:dev": "docker compose -f dev.docker-compose.yml up --build"
   },
   "keywords": [],
-  "prettier": {
-    "printWidth": 120,
-    "singleQuote": true,
-    "jsxSingleQuote": true,
-    "arrowParens": "avoid",
-    "semi": false,
-    "trailingComma": "none",
-    "endOfLine": "crlf",
-    "parser": "typescript",
-    "tabWidth": 2,
-    "useTabs": false
-  },
   "endOnLine": "crlf",
   "author": "",
   "license": "ISC",
@@ -46,6 +29,7 @@
     "eslint-config-love": "^47.0.0",
     "eslint-config-prettier": "^9.1.0",
     "nodemon": "^3.1.5",
+    "turbo": "^2.1.3",
     "typescript": "^5.4.5",
     "vitest": "^1.5.2"
   },
