--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -1,22 +1,15 @@
 {
-  "name": "beatriz-bot",
-  "version": "1.0.0",
-  "description": "",
-  "engines": {
-    "node": "20.x"
-  },
+  "name": "bot",
   "scripts": {
     "generate_db": "npx prisma db push",
     "test": "vitest",
-    "cp": "node ./cp.cjs",
     "test:ui": "vitest --ui",
-    "dev": "npm run cp && npm run generate_db && nodemon -L --exec ts-node src/index.ts",
-    "build": "npm run cp &&  tsc",
-    "start": "node ./dist/index.js"
+    "dev": "nodemon -L --exec ts-node src/index.ts",
+    "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "paths": {
+    "@/libs/*": ["../libs/dist/*"]
+  },
   "dependencies": {
     "@napi-rs/canvas": "^0.1.51",
     "@prisma/client": "^5.13.0",
