--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A Bot multipurpose for discord",
   "packageManager": "npm@10.0.0",
-  "workspaces": ["packages/bot", "packages/website"],
+  "workspaces": ["packages/*"],
   "scripts": {
     "lint": "biome check --write --diagnostic-level=error",
     "test": "vitest",
@@ -11,29 +11,28 @@
     "dev": "env-cmd turbo dev",
     "build": "env-cmd turbo build",
     "bot:start": "env-cmd npm run start --workspace=packages/bot",
-    "bot:generate_db": "env-cmd npm run generate_db --workspace=packages/bot",
+    "generate_db": "env-cmd prisma db push",
     "docker:prod": "docker compose up --build",
     "docker:dev": "docker compose -f dev.docker-compose.yml up --build"
   },
   "keywords": [],
   "endOnLine": "crlf",
-  "author": "",
-  "license": "ISC",
+  "author": "frova_happy",
+  "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "1.9.2",
-    "@types/get-pixels": "^3.3.4",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@vitest/ui": "^1.5.2",
-    "env-cmd": "^10.1.0",
-    "eslint": "^8.57.0",
-    "eslint-config-love": "^47.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "nodemon": "^3.1.5",
-    "turbo": "^2.1.3",
-    "typescript": "^5.4.5",
-    "vitest": "^1.5.2"
+    "@types/get-pixels": "3.3.4",
+    "@types/node": "22.7.5",
+    "@vitest/ui": "1.5.2",
+    "nodemon": "3.1.5",
+    "prisma": "5.20.0",
+    "turbo": "2.1.3",
+    "typescript": "5.6.3",
+    "vitest": "1.5.2"
   },
   "dependencies": {
+    "@prisma/client": "5.20.0",
+    "env-cmd": "10.1.0",
     "get-pixels": "3.3.3"
   }
 }
