--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build"
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -13,12 +14,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.1",
-    "sass": "^1.71.1",
-    "typescript": "^5"
+    "sass": "^1.71.1"
   }
 }
