--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "globalEnv": [".env"],
+  "envMode": "loose",
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
