build(Root): :building_construction: update env require for the build and deploy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,11 @@ services:
     build: 
       context: .
       target: deploy_bot
+      args:
+        - DATABASE_URL=${DATABASE_URL}
+        - DISCORD_TOKEN=${DISCORD_TOKEN}
+        - DISCORD_CLIENT=${DISCORD_CLIENT}
+        - DISCORD_OWNER=${DISCORD_OWNER}
     env_file:
       - .env
     container_name: bot
