--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "A Bot multipurpose for discord",
   "packageManager": "npm@10.0.0",
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "lint": "biome check --write --diagnostic-level=error",
     "test": "vitest",
@@ -26,6 +28,7 @@
     "@vitest/ui": "1.5.2",
     "nodemon": "3.1.5",
     "prisma": "5.20.0",
+    "tsx": "^4.19.1",
     "turbo": "2.1.3",
     "typescript": "5.6.3",
     "vitest": "1.5.2"
