--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "env-cmd turbo dev",
     "build": "env-cmd turbo build",
     "bot:start": "env-cmd npm run start --workspace=packages/bot",
-    "generate_db": "env-cmd prisma db push",
+    "generate_db": "prisma db push",
     "docker:prod": "docker compose up --build",
     "docker:dev": "docker compose -f dev.docker-compose.yml up --build"
   },
@@ -22,20 +22,21 @@
   "author": "frova_happy",
   "license": "MIT",
   "devDependencies": {
-    "@biomejs/biome": "1.9.2",
+    "@biomejs/biome": "1.9.4",
     "@types/get-pixels": "3.3.4",
-    "@types/node": "22.7.5",
-    "@vitest/ui": "1.5.2",
-    "nodemon": "3.1.5",
-    "prisma": "5.20.0",
-    "tsx": "^4.19.1",
-    "turbo": "2.1.3",
+    "@types/node": "22.8.4",
+    "@vitest/ui": "2.1.4",
+    "nodemon": "3.1.7",
+    "prisma": "5.21.1",
+    "tsx": "4.19.2",
+    "turbo": "2.2.3",
     "typescript": "5.6.3",
-    "vitest": "1.5.2"
+    "vitest": "2.1.4"
   },
   "dependencies": {
-    "@prisma/client": "5.20.0",
+    "@prisma/client": "5.21.1",
     "env-cmd": "10.1.0",
-    "get-pixels": "3.3.3"
+    "get-pixels": "3.3.3",
+    "zod": "^3.23.8"
   }
 }
