--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -6,15 +6,16 @@
     "start": "NODE_ENV=production node dist/index.js"
   },
   "paths": {
-    "@/libs/*": ["../libs/dist/*"]
+    "@/libs/*": [
+      "../libs/dist/*"
+    ]
   },
   "dependencies": {
     "@napi-rs/canvas": "^0.1.51",
     "discord.js": "^14.16.2",
     "dotenv": "^16.4.5",
     "module-alias": "^2.2.3",
-    "picocolors": "^1.0.1",
-    "zod": "^3.22.4"
+    "picocolors": "^1.0.1"
   },
   "devDependencies": {
     "@types/module-alias": "^2.0.4",
