--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -1,14 +1,13 @@
 {
   "name": "bot",
+  "version": "1.0.0",
   "scripts": {
     "dev": "nodemon -L --exec ts-node src/index.ts",
     "build": "tsc",
     "start": "NODE_ENV=production node dist/index.js"
   },
   "paths": {
-    "@/libs/*": [
-      "../libs/dist/*"
-    ]
+    "@/libs/*": ["../libs/dist/*"]
   },
   "dependencies": {
     "@napi-rs/canvas": "^0.1.51",
