update lib in website

--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -41,7 +41,8 @@
       "@icons/*": [
         "src/icons/*"
       ]
-    }
+    },
+    "target": "ES2017"
   },
   "include": [
     "next-env.d.ts",
