implement partially paintCanvas - fix error of import routes - adjust params of template and schema - add title to schema canvas

--- a/packages/libs/tsconfig.json
+++ b/packages/libs/tsconfig.json
@@ -16,10 +16,10 @@
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
       "@type/*": [
-        "src/types/*"
+        "./types/*"
       ]
     }
   },
