add support for additional canvas context and improve shape rendering

--- a/packages/libs/tsconfig.json
+++ b/packages/libs/tsconfig.json
@@ -17,6 +17,9 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./src",
+    "types": [
+      "vitest/globals"
+    ],
     "paths": {
       "@type/*": [
         "./types/*"
