--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -17,6 +17,7 @@
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "express": "4.21.1",
+    "express-rate-limit": "^7.5.0",
     "express-session": "1.18.1",
     "module-alias": "^2.2.3",
     "passport": "0.7.0",
