--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vitest": "2.1.5"
   },
   "dependencies": {
+    "@libsql/client": "^0.14.0",
     "@prisma/client": "5.22.0",
     "env-cmd": "10.1.0",
     "get-pixels": "3.3.3",
