--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -2,7 +2,7 @@
   "name": "bot",
   "version": "2.0.0",
   "scripts": {
-    "dev": "nodemon -L --exec ts-node src/index.ts",
+    "dev": "nodemon -L --exec tsx src/index.ts",
     "build": "tsc",
     "start": "NODE_ENV=production node dist/index.js"
   },
