fix: update dev script to preserve watch output for improved development experience

--- a/packages/libs/package.json
+++ b/packages/libs/package.json
@@ -2,6 +2,6 @@
   "name": "libs",
   "scripts": {
     "build": "tsc",
-    "dev": " tsc --watch"
+    "dev": " tsc --preserveWatchOutput --watch"
   }
 }
