--- a/biome.json
+++ b/biome.json
@@ -18,7 +18,7 @@
     "enabled": true,
     "rules": {
       "recommended": true,
-      "suspicious": { "noExplicitAny": "warn" },
+      "suspicious": { "noExplicitAny": "off" },
       "complexity": { "noForEach": "warn" },
       "performance": { "noAccumulatingSpread": "warn" },
       "correctness": { "useExhaustiveDependencies": "warn" },
