refactor: rename build:web script to buildWeb for consistency

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "env-cmd turbo dev",
     "build": "env-cmd turbo build",
     "build:lib": "env-cmd npm run build --workspace=packages/lib",
-    "build:web": "env-cmd npm run build --workspace=packages/website",
+    "buildWeb": "env-cmd npm run build --workspace=packages/website",
     "start:bot": "env-cmd npm run start --workspace=packages/bot",
     "generate_db": "env-cmd prisma db push",
     "docker:prod": "docker compose up --build",
