refactor: update database module imports and remove deprecated core database references

--- a/packages/bot/tsconfig.json
+++ b/packages/bot/tsconfig.json
@@ -37,6 +37,9 @@
       ],
       "@type/*": [
         "../libs/src/types/*"
+      ],
+      "@db": [
+        "src/database/index.ts"
       ]
     }
   },
