--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "A Bot multipurpose for discord",
   "packageManager": "npm@10.0.0",
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "lint": "biome check --write --diagnostic-level=error",
     "test": "vitest",
@@ -30,6 +32,7 @@
     "tsx": "4.19.2",
     "turbo": "2.3.1",
     "typescript": "5.7.2",
+    "vite-tsconfig-paths": "5.1.4",
     "vitest": "2.1.5"
   },
   "dependencies": {
