--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "beatriz-dono",
   "version": "1.0.0",
   "description": "A Bot multipurpose for discord",
-  "packageManager": "npm@10.0.0",
-  "workspaces": [
-    "packages/*"
-  ],
+  "packageManager": "npm@11.1.0",
+  "workspaces": ["packages/*"],
   "scripts": {
     "lint": "biome check --write --diagnostic-level=error",
     "test": "vitest",
@@ -25,21 +23,21 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/get-pixels": "3.3.4",
-    "@types/node": "22.9.3",
-    "@vitest/ui": "2.1.5",
-    "nodemon": "3.1.7",
-    "prisma": "5.22.0",
-    "tsx": "4.19.2",
-    "turbo": "2.3.1",
-    "typescript": "5.7.2",
+    "@types/node": "22.13.5",
+    "@vitest/ui": "3.0.7",
+    "nodemon": "3.1.9",
+    "prisma": "6.4.1",
+    "tsx": "4.19.3",
+    "turbo": "2.4.4",
+    "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "2.1.5"
+    "vitest": "3.0.7"
   },
   "dependencies": {
-    "@libsql/client": "^0.14.0",
-    "@prisma/client": "5.22.0",
+    "@libsql/client": "0.14.0",
+    "@prisma/client": "6.4.1",
     "env-cmd": "10.1.0",
     "get-pixels": "3.3.3",
-    "zod": "^3.23.8"
+    "zod": "3.24.2"
   }
 }
