--- a/packages/libs/tsconfig.json
+++ b/packages/libs/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "lib": [
-      "es2023",
+      "ESNext",
       "DOM"
     ],
-    "module": "CommonJS",
+    "module": "ESNext",
     "target": "ESNext",
     "rootDir": "./src",
     "outDir": "./dist",
@@ -13,7 +13,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./src",
