--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -18,6 +18,7 @@
     "astro": "^5.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "starlight-theme-rapide": "^0.4.0"
   }
 }
