--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -6,21 +6,11 @@
     "rootDir": ".",
     "baseUrl": ".",
     "paths": {
-      "@components/*": [
-        "src/components/*"
-      ],
-      "@hooks/*": [
-        "src/hooks/*"
-      ],
-      "@utils/*": [
-        "src/utils/*"
-      ],
-      "@src/*": [
-        "src/*"
-      ],
-      "@layouts/*": [
-        "src/layouts/*"
-      ]
+      "@components/*": ["src/components/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@utils/*": ["src/utils/*"],
+      "@src/*": ["src/*"],
+      "@layouts/*": ["src/layouts/*"]
     }
   }
 }
