--- a/packages/website-legacy/tsconfig.json
+++ b/packages/website-legacy/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -23,34 +19,15 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/*"
-      ],
-      "@type/*": [
-        "../libs/src/types/*"
-      ],
-      "@libs/*": [
-        "../libs/dist/*"
-      ],
-      "@ui/*": [
-        "src/components/UI/*"
-      ],
-      "@hooks/*": [
-        "src/hooks/*"
-      ],
-      "@icons/*": [
-        "src/icons/*"
-      ]
+      "@/*": ["src/*"],
+      "@type/*": ["../libs/src/types/*"],
+      "@libs/*": ["../libs/dist/*"],
+      "@ui/*": ["src/components/UI/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@icons/*": ["src/icons/*"]
     },
     "target": "ES2017"
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
