style(bot): :rotating_light: change lint diagnostic level to warn and remove biome-ignore comments for noExplicitAny

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "packageManager": "npm@11.1.0",
   "workspaces": ["packages/*"],
   "scripts": {
-    "lint": "biome check --write --diagnostic-level=error",
+    "lint": "biome check --write --diagnostic-level=warn",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "dev": "env-cmd turbo dev",
