--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -3,7 +3,9 @@
   "version": "2.0.0",
   "scripts": {
     "dev": "nodemon -L --exec tsx src/index.ts",
-    "start": "tsx src/index.ts"
+    "start": "tsx src/index.ts",
+    "db:push": "npx drizzle-kit push",
+    "db:migrate": "npx drizzle-kit generate && npx drizzle-kit migrate"
   },
   "paths": {
     "@/libs/*": ["../libs/dist/*"]
