--- a/packages/bot/tsconfig.json
+++ b/packages/bot/tsconfig.json
@@ -33,6 +33,9 @@
       "@libs/*": [
         "../libs/dist/*"
       ],
+      "libs/*": [
+        "../libs/dist/*"
+      ],
       "@type/*": [
         "../libs/src/types/*"
       ],
