chore: update dependencies and improve rollup configuration

--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -15,25 +15,27 @@
     "exec": "rollup -c && tsx index.js"
   },
   "dependencies": {
-    "@napi-rs/canvas": "^0.1.67",
     "cors": "2.8.5",
-    "discord.js": "^14.18.0",
-    "dotenv": "^16.4.7",
-    "express": "4.21.2",
+    "dotenv": "^16.5.0",
+    "express": "5.1.0",
     "express-rate-limit": "^7.5.0",
     "express-session": "1.18.1",
     "module-alias": "^2.2.3",
     "passport": "0.7.0",
-    "passport-discord": "0.1.4",
-    "picocolors": "^1.1.1"
+    "passport-discord": "0.1.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.1",
     "@types/module-alias": "^2.0.4",
     "@types/passport": "^1.0.17",
     "@types/passport-discord": "^0.1.14",
-    "ts-node": "10.9.2"
+    "ts-node": "10.9.2",
+    "discord.js": "^14.19.3",
+    "@napi-rs/canvas": "^0.1.70",
+    "@libsql/client": "0.15.4",
+    "drizzle-kit": "0.31.1",
+    "drizzle-orm": "0.43.1"
   }
 }
