--- a/package.json
+++ b/package.json
@@ -26,30 +26,25 @@
   "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@rollup/plugin-alias": "5.1.1",
+    "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-json": "6.1.0",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "@types/node": "22.14.0",
-    "@vitest/ui": "3.1.1",
-    "nodemon": "3.1.9",
-    "rollup": "4.40.0",
+    "@types/node": "22.15.3",
+    "@vitest/ui": "3.1.2",
+    "nodemon": "3.1.10",
+    "rollup": "4.40.1",
     "rollup-plugin-typescript-paths": "1.5.0",
     "rollup-plugin-typescript2": "0.36.0",
     "tslib": "2.8.1",
-    "tsx": "4.19.3",
-    "turbo": "2.5.0",
-    "typescript": "5.8.2",
+    "tsx": "4.19.4",
+    "turbo": "2.5.2",
+    "typescript": "5.8.3",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.1.1"
+    "vitest": "3.1.2"
   },
   "dependencies": {
-    "@libsql/client": "0.15.2",
-    "chalk": "^5.4.1",
-    "drizzle-kit": "0.30.6",
-    "drizzle-orm": "0.41.0",
     "env-cmd": "10.1.0",
-    "glob": "11.0.1",
     "module-alias": "2.2.3",
-    "zod": "3.24.2"
+    "picocolors": "1.1.1",
+    "zod": "3.24.3"
   }
 }
