--- a/package.json
+++ b/package.json
@@ -3,22 +3,20 @@
   "version": "2.0.0",
   "description": "A Bot multipurpose for discord",
   "packageManager": "npm@11.2.0",
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": ["packages/*"],
   "scripts": {
     "lint": "biome check --write --diagnostic-level=warn",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "db:push": "env-cmd npm run db:push --workspace=packages/bot",
-    "db:migrate": "env-cmd npm run db:migrate --workspace=packages/bot",
+    "db:push": "npm run db:push --workspace=packages/bot",
+    "db:migrate": "npm run db:migrate --workspace=packages/bot",
     "bot:generateListServices": "env-cmd npm run generateListServices --workspace=packages/bot",
     "dev": "env-cmd turbo dev",
     "build": "env-cmd turbo build",
-    "build:lib": "env-cmd npm run build --workspace=packages/lib",
-    "start:bot": "env-cmd npm run start --workspace=packages/bot",
-    "docker:prod": "docker compose up --build",
-    "docker:dev": "docker compose -f dev.docker-compose.yml up --build"
+    "build:libs": "npm run build --workspace=packages/libs",
+    "build:bot": "npm run build --workspace=packages/bot",
+    "start:bot": "npm run start --workspace=packages/bot",
+    "start:production": "docker compose up --build"
   },
   "keywords": [],
   "endOnLine": "crlf",
@@ -26,25 +24,28 @@
   "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-alias": "5.1.1",
+    "@rollup/plugin-commonjs": "28.0.3",
     "@rollup/plugin-json": "6.1.0",
-    "@types/node": "22.15.3",
-    "@vitest/ui": "3.1.2",
+    "@rollup/plugin-node-resolve": "16.0.1",
+    "@rollup/plugin-typescript": "12.1.2",
+    "@types/node": "22.15.14",
+    "@vitest/ui": "3.1.3",
+    "glob": "11.0.2",
     "nodemon": "3.1.10",
-    "rollup": "4.40.1",
+    "rollup": "4.40.2",
     "rollup-plugin-typescript-paths": "1.5.0",
     "rollup-plugin-typescript2": "0.36.0",
     "tslib": "2.8.1",
-    "tsx": "4.19.4",
-    "turbo": "2.5.2",
+    "turbo": "2.5.3",
     "typescript": "5.8.3",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.1.2"
+    "vitest": "3.1.3"
   },
   "dependencies": {
-    "env-cmd": "10.1.0",
     "module-alias": "2.2.3",
     "picocolors": "1.1.1",
-    "zod": "3.24.3"
+    "tsx": "4.19.4",
+    "zod": "3.24.4"
   }
 }
