--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "2.0.0",
   "description": "A Bot multipurpose for discord",
   "packageManager": "npm@11.2.0",
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "lint": "biome check --write --diagnostic-level=warn",
     "test": "vitest",
@@ -36,6 +38,7 @@
     "rollup": "4.40.2",
     "rollup-plugin-typescript-paths": "1.5.0",
     "rollup-plugin-typescript2": "0.36.0",
+    "tsc-alias": "1.8.16",
     "tslib": "2.8.1",
     "turbo": "2.5.3",
     "typescript": "5.8.3",
@@ -45,6 +48,7 @@
   "dependencies": {
     "module-alias": "2.2.3",
     "picocolors": "1.1.1",
+    "tsconfig-paths": "4.2.0",
     "tsx": "4.19.4",
     "zod": "3.24.4"
   }
