--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -2,13 +2,10 @@
   "name": "bot",
   "version": "1.0.0",
   "type": "module",
-  "_moduleAliases": {
-    "@libs": "file:../libs/dist"
-  },
   "scripts": {
     "dev": "nodemon",
     "generateListServices": "tsx src/generateListServices.ts",
-    "build": "rollup -c && tsc-alias",
+    "build": " npm run generateListServices && rollup -c",
     "start": "tsx index.js",
     "db:push": "npx drizzle-kit push",
     "db:migrate": "npx drizzle-kit generate && npx drizzle-kit migrate"
@@ -17,30 +14,30 @@
     "watch": ["src"],
     "ext": "ts",
     "wait": 1000,
+    "ignore": ["dist", "src/generateListServices.ts", "src/listImports.ts"],
     "exec": "npm run build && npm run start"
   },
   "dependencies": {
-    "cors": "2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "5.1.0",
-    "express-rate-limit": "^7.5.0",
-    "express-session": "1.18.1",
-    "module-alias": "^2.2.3",
-    "passport": "0.7.0",
-    "discord.js": "^14.19.3",
-    "@napi-rs/canvas": "^0.1.70",
     "@libsql/client": "0.15.4",
+    "@napi-rs/canvas": "0.1.70",
+    "cors": "2.8.5",
+    "discord.js": "14.19.3",
+    "dotenv": "16.5.0",
     "drizzle-kit": "0.31.1",
     "drizzle-orm": "0.43.1",
+    "express": "5.1.0",
+    "express-rate-limit": "7.5.0",
+    "express-session": "1.18.1",
+    "module-alias": "2.2.3",
+    "passport": "0.7.0",
     "passport-discord": "0.1.4"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
-    "@types/express-session": "^1.18.1",
-    "@types/module-alias": "^2.0.4",
-    "@types/passport": "^1.0.17",
-    "@types/passport-discord": "^0.1.14",
-    "ts-node": "10.9.2"
+    "@types/cors": "2.8.17",
+    "@types/express": "5.0.1",
+    "@types/express-session": "1.18.1",
+    "@types/module-alias": "2.0.4",
+    "@types/passport": "1.0.17",
+    "@types/passport-discord": "0.1.14"
   }
 }
