refactor: streamline Dockerfile and docker-compose by removing redundant environment variable assignments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
     environment:
       - PRIVATE=${PRIVATE}
       - PORT=${PORT}
+
     build:
+      args:
+        - PRIVATE=$PRIVATE
+        - PORT=$PORT
       context: .
       target: production
