refactor: clean up package.json scripts and update dependencies for website package

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "db:push": "npm run db:push --workspace=packages/bot",
-    "bot:generateListServices": "env-cmd npm run generateListServices --workspace=packages/bot",
-    "dev": "env-cmd turbo dev",
-    "build": "env-cmd turbo build",
+    "dev": "turbo dev",
+    "build": "turbo build",
     "build:libs": "npm run build --workspace=packages/libs",
     "build:bot": "npm run build --workspace=packages/bot",
     "start:bot": "npm run start --workspace=packages/bot",
