fix: update db:push script in package.json to generate and apply migrations

--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -7,7 +7,7 @@
     "generateListServices": "tsx src/generateListServices.ts",
     "build": " npm run generateListServices && rollup -c",
     "start": "tsx index.js",
-    "db:push": "npx drizzle-kit push"
+    "db:push": "npx drizzle-kit generate && drizzle-kit up"
   },
   "nodemonConfig": {
     "watch": ["src"],
