feat: add global type definitions for commands, buttons, menus, and modals

--- a/packages/bot/tsconfig.json
+++ b/packages/bot/tsconfig.json
@@ -19,7 +19,7 @@
     "resolveJsonModule": true,
     "types": [
       "vitest/globals",
-      "./src/globals"
+      "./src/global"
     ],
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
