feat: implement font loading and rendering functionality with canvas integration

--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -6,11 +6,27 @@
     "rootDir": ".",
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@hooks/*": ["src/hooks/*"],
-      "@utils/*": ["src/utils/*"],
-      "@src/*": ["src/*"],
-      "@layouts/*": ["src/layouts/*"]
+      "@/*": [
+        "src/*"
+      ],
+      "@components/*": [
+        "src/components/*"
+      ],
+      "@hooks/*": [
+        "src/hooks/*"
+      ],
+      "@utils/*": [
+        "src/utils/*"
+      ],
+      "@src/*": [
+        "src/*"
+      ],
+      "@layouts/*": [
+        "src/layouts/*"
+      ],
+      "@libs/*": [
+        "../libs/dist/*"
+      ]
     }
   }
 }
